--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 "version": "0.0.7",
 "minTextGeneratorVersion": "0.1.0",
 "description": "DE: Das ist die Deutsche Übersetzung des Standard-Pakets vom Obsidian-Plugins Text Generator. EN: This is the German translation of the Standard Prompts Package from the Obsidian plugin Text Generator.",
-"author": "Noureddine Haouari, translated by Davide Wiest",
+"author": "Davide Wiest",
 "tags" : "writing, schreiben, brainstorming",
 "authorUrl": "https://www.github.com/DavideWiest",
 "repo":"text-gen/gpt-prompt-templates-DE"
